Edited wiki page Downloads through web user interface.

--- a/wiki/Downloads.wiki
+++ b/wiki/Downloads.wiki
@@ -1,4 +1,4 @@
 All downloads go here...
 
-Current release is here
-http://tinyurl.com/ustealth v1.0 (beta)
+Current compiled release is here
+http://gbatemp.net/threads/ustealth-wii-u-format-disk-nag-solved.352786/#post-4738618
