--- a/trunk/UStealth/ToggleMain.resx
+++ b/trunk/UStealth/ToggleMain.resx
@@ -129,7 +129,7 @@ hippojay
 Onion_Knight
 and Air2004 for testing and allowing me to debug on his system
 
-Special thanks to Rob Jansen for debugging and updating the code to support newer drives with larger sectors.
+Special thanks to RobJanssen for debugging and updating the code to support newer drives with larger sectors.
 
   -jayjay123</value>
   </data>
